--- a/content/publication/PR2016.md
+++ b/content/publication/PR2016.md
@@ -7,7 +7,7 @@ image_preview = ""
 math = true
 publication_types = ["2"]
 publication = "In *Pattern Recognition*"
-publication_short = "In *Pattern Recognition 2016*"
+publication_short = "*Pattern Recognition 2016*"
 selected = true
 title = "A flexible hierarchical approach for facial age estimation based on multiple features"
 #url_code = "#"
