--- a/content/publication/PR2016.md
+++ b/content/publication/PR2016.md
@@ -16,7 +16,7 @@ url_pdf = "papers/PR2016.pdf"
 #url_project = "project/deep-learning/"
 #url_slides = "#"
 #url_video = "#"
-url_bibtex = "papers/PR2016.bib"
+url_bibtex = "papers/PR2016.html"
 
 #[[url_custom]]
 #name = "Custom Link"
