--- a/content/publication/PR2016.md
+++ b/content/publication/PR2016.md
@@ -20,7 +20,7 @@ url_bibtex = "papers/PR2016.html"
 
 #[[url_custom]]
 #name = "Custom Link"
-#url = "http://www.example.org"
+#url = "https://www.example.org"
 
 # Optional featured image (relative to `static/img/` folder).
 [header]
