--- a/content/publication/3DV2017.md
+++ b/content/publication/3DV2017.md
@@ -8,7 +8,7 @@ math = true
 publication_types = ["1"]
 publication = "In *arXiv cs.CV*"
 publication_short = "*arXiv cs.CV*"
-selected = true
+selected = false
 title = "Compact Model Representation for 3D Reconstruction"
 #url_code = "#"
 #url_dataset = "#"
