--- a/content/publication/PR2016.md
+++ b/content/publication/PR2016.md
@@ -8,7 +8,7 @@ math = true
 publication_types = ["2"]
 publication = "In *Pattern Recognition*"
 publication_short = "*Pattern Recognition 2016*"
-selected = true
+selected = false
 title = "A flexible hierarchical approach for facial age estimation based on multiple features"
 #url_code = "#"
 #url_dataset = "#"
