--- a/content/publication/3DV2017.md
+++ b/content/publication/3DV2017.md
@@ -1,13 +1,13 @@
 +++
-abstract = "3D reconstruction from 2D images is a central problem in computer vision. Recent works have been focusing on reconstruction directly from a single image. It is well known however that only one image cannot provide enough information for such a reconstruction. A prior knowledge that has been entertained are 3D CAD models due to its online ubiquity. A fundamental question is how to compactly represent millions of CAD models while allowing generalization to new unseen objects with fine-scaled geometry. We introduce an approach to compactly represent a 3D mesh. Our method first selects a 3D model from a graph structure by using a novel free-form deformation FFD 3D-2D registration, and then the selected 3D model is refined to best fit the image silhouette. We perform a comprehensive quantitative and qualitative analysis that demonstrates impressive dense and realistic 3D reconstruction from single images."
-abstract_short = "3D reconstruction from 2D images is a central problem in computer vision. Recent works have been focusing on reconstruction directly from a single image. It is well known however that only one image cannot provide enough information for such a reconstruction. A prior knowledge that has been entertained are 3D CAD models due to its online ubiquity. A fundamental question is how to compactly represent millions of CAD models while allowing generalization to new unseen objects with fine-scaled geometry. We introduce an approach to compactly represent a 3D mesh. Our method first selects a 3D model from a graph structure by using a novel free-form deformation FFD 3D-2D registration, and then the selected 3D model is refined to best fit the image silhouette. We perform a comprehensive quantitative and qualitative analysis that demonstrates impressive dense and realistic 3D reconstruction from single images."
-authors = ["Jhony K. Pontes", "Chen Kong", "Anders Eriksson", "Clinton Fookes", "Sridha Sridharan", "Simon Lucey"]
-date = "2017-07-23"
-image_preview = ""
+abstract = "3D reconstruction from 2D images is a central problem in computer vision. Recent works have been focusing on reconstruction directly from a single image. It is well known however that only one image cannot provide enough information for such a reconstruction. A prior knowledge that has been entertained are 3D CAD models due to its online ubiquity. A fundamental question is how to compactly represent millions of CAD models while allowing generalization to new unseen objects with fine-scaled geometry. We introduce an approach to compactly represent a 3D mesh. Our method first selects a 3D model from a graph structure by using a novel free-form deformation (FFD) 3D-2D registration, and then the selected 3D model is refined to best fit the image silhouette. We perform a comprehensive quantitative and qualitative analysis that demonstrates impressive dense and realistic 3D reconstruction from single images."
+abstract_short = ""
+authors = ["**Jhony K. Pontes**", "[Chen Kong](http://www.cs.cmu.edu/~chenk/)", "[Anders Eriksson](https://ando.000webhostapp.com/)", "[Clinton Fookes](http://staff.qut.edu.au/staff/fookes/)", "[Sridha Sridharan](http://staff.qut.edu.au/staff/sridhara/)", "[Simon Lucey](http://www.simonlucey.com/)"]
+date = "2017-10-23"
+image_preview = "headers/3dv17_small.png"
 math = true
 publication_types = ["1"]
-publication = "In *arXiv cs.CV*"
-publication_short = "*arXiv cs.CV*"
+publication = "In *3DV 2017*"
+publication_short = "*3DV 2017*"
 selected = false
 title = "Compact Model Representation for 3D Reconstruction"
 #url_code = "#"
@@ -16,8 +16,8 @@ url_pdf = "papers/ArXiV_3DV2017.pdf"
 url_arxiv = "papers/ArXiV_3DV2017.pdf"
 #url_project = "project/deep-learning/"
 #url_slides = "#"
-#url_video = "#"
-url_bibtex = "papers/ArXiV_3DV2017.html"
+url_video = "papers/Supplementary_Material_3DV_2017.pptx"
+url_bibtex = "papers/3DV2017.html"
 url_sup = "papers/Supplementary_Material_3DV_2017.pptx"
 
 #[[url_custom]]
@@ -30,3 +30,18 @@ image = "headers/overview.png"
 #caption = "My caption :smile:"
 
 +++
+<img src="/3dv2017.gif" alt="Drawing" style="width: 600px;"/>
+### Example of a 3D CAD model being fit to a single image using our FFD anchor registration and silhouette fitting.
+<img src="/3DV_img1.png" alt="Drawing" style="width: 800px;"/>
+<img src="/3dv2017_1.gif" alt="Drawing" style="width: 700px;"/>
+<img src="/3DV_img2.png" alt="Drawing" style="width: 1200px;"/>
+
+
+### Example of our 3D reconstruction from a single image.
+<img src="/3DV_img3.png" alt="Drawing" style="width: 300px;"/>
+<img src="/3DV_img4.png" alt="Drawing" style="width: 700px;"/>
+<img src="/3dv2017_3.gif" alt="Drawing" style="width: 900px;"/>
+
+**Please check the supplementary material out for more examples.**
+
+[[1] C. Kong, C-H. Lin and S. Lucey, Using Locally Corresponding CAD Models for Dense 3D Reconstructions from a Single Image, CVPR 2017.](http://ci2cv.net/media/papers/chenkong_cvpr_2017.pdf)
