--- a/content/publication/3DV2017.md
+++ b/content/publication/3DV2017.md
@@ -9,7 +9,7 @@ publication_types = ["1"]
 publication = "In *3DV 2017*"
 publication_short = "*3DV 2017*"
 selected = false
-title = "Compact Model Representation for 3D Reconstruction"
+title = "Compact model representation for 3D reconstruction"
 #url_code = "#"
 #url_dataset = "#"
 url_pdf = "papers/ArXiV_3DV2017.pdf"
