--- a/content/publication/3DV2017.md
+++ b/content/publication/3DV2017.md
@@ -10,7 +10,7 @@ publication = "In *3DV 2017*"
 publication_short = "*3DV 2017*"
 selected = false
 title = "Compact model representation for 3D reconstruction"
-#url_code = "#"
+url_code = "https://github.com/jhonykaesemodel/compact_3D_reconstruction"
 #url_dataset = "#"
 url_pdf = "papers/ArXiV_3DV2017.pdf"
 url_arxiv = "papers/ArXiV_3DV2017.pdf"
